--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9"
   }
 }
